@@ -396,16 +396,17 @@ End of the part generated by GIMP
         try:
             html_file = open (self.filename)
 
-            #Regular expression to  pick everything up to the next doublequote
-            #character after finding  the sequence 'href="'. The found sequences
-            #will be returned as  a list by the "findall" method.
+            # Regular expression to pick everything up to the next
+            # doublequote character after finding the sequence 'href="'.
+            # The found sequences will be returned as a list by the
+            # "findall" method.
             expr = re.compile (r"""href\=\"([^\"]*?)\"""")
             url_list = expr.findall (html_file.read (2 ** 18))
             html_file.close()
 
         except:
-            #silently ignore any errors parsing this. The file being
-            #ovewriten  may not be a  file genrated by py-slice.
+            # silently ignore any errors parsing this. The file being
+            # overwritten may not be a file created by py-slice.
             pass
 
         return url_list
@@ -413,6 +414,7 @@ End of the part generated by GIMP
 
 register(
     "python-fu-slice",
+    # table snippet means a small piece of HTML code here
     N_("Cuts an image along its guides, creates images and a HTML table snippet"),
     """Add guides to an image. Then run this. It will cut along the guides,
     and give you the html to reassemble the resulting images. If you
@@ -440,6 +442,7 @@ register(
         (0,15,1)),
         (PF_TOGGLE, "animate",      _("Javascript for onmouseover and clicked"),
          False),
+        # table caps are table cells on the edge of the table
         (PF_TOGGLE, "skip-caps",    _("Skip animation for table caps"), True)
     ],
     [],
