@@ -1,3 +1,11 @@
+2008-10-13  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	Bug 556182 – Could you please explain a few strings [I18N]
+	
+	* plug-ins/pygimp/plug-ins/py-slice.py: added translator comments.
+
 2008-10-10  Michael Natterer  <mitch@gimp.org>
 
 	Merged from trunk:
